# bulkRNASeq

./: .gitignore  README.md  Snakefile  app.py  config_setup.py  dl_notes  environment.yml  monitor.py  mukul_report.md  notes  pyproject.toml  setup.py  update_sample.py  upload.py
.snakemake/conda/: d98e737aad61db5f9c5226bfe6a9984f_.yaml
.snakemake/metadata/: dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9hbGlnbmVkL3ByYW5heS5iYW0=  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9hbGlnbmVkL3ByYW5heS5iYW0uYmFp  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9jb21iaW5lZF9jb3VudHMudHN2  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9jb3VudHMvcHJhbmF5X2NvdW50cy50c3Y=  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9jb3VudHMvcHJhbmF5X2NvdW50cy50c3Yuc3VtbWFyeQ==  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9maW5hbF9yZXBvcnQubWQ=  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9rYWxsaXN0by9wcmFuYXk=  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9rYWxsaXN0by9wcmFuYXkvYWJ1bmRhbmNlLmg1  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9xYy9wcmFuYXlfZmFzdHFjLmh0bWw=  dGVzdHMvZGF0YS9zbmFrZW1ha2VfcmVzdWx0cy9xYy9wcmFuYXlfZmFzdHFjLnppcA==
config/: combined_config.yaml  environment.yml  post.yaml  pre.yaml  prepost.yaml  preprocessing.yaml  samples.txt  snakemake_config.yaml  test_config_post.yaml  test_config_pre.yaml
docker/: Dockerfile  Dockerfile.api  docker-compose.yml
scripts/: bulkrnaseq.sh  create_env.py  launch.sh
src/bulkRNASeq/: __init__.py  main.py
src/bulkRNASeq/mystery/: histat2.py  kallisto.py  salmon.py
src/bulkRNASeq/pipeline/: __init__.py  pipeline_runner.py  step_runner.py
src/bulkRNASeq/postprocessing/: __init__.py  diffexp.py  eda.py  enrichment.py  histat.py  kallisto.py  main.py  pipeline_runner.py  qa.py  run_postprocessing.py  step_runner.py  workflow.py
src/bulkRNASeq/preprocessing/: __init__.py  aligner_base.py  aligner_factory.py  alignment.py  bam_processing.py  featurecounts.py  hisat2.py  hisat2_aligner.py  histat2.py  input_processor.py  kallisto.py  kallisto_aligner.py  main copy.py  main.py  pipeline_runner.py  qc.py  quantification.py  reporting.py  run_preprocessing.py  salmon_aligner.py  trim.py  workflow.py
src/bulkRNASeq/utils/: __init__.py  check.py  checkpoint.py  checkpoint_viewer.py  config_handler.py  logger.py  (+1 more)
workflow/envs/: align.yaml  post.yaml  qc.yaml  snakemake.yaml
workflow/rules/: align.smk  counts.smk  post.smk  qc.smk
(+5 files in other folders)
